# machine-learning-excercise-notebook-python

./: pyproject.toml
1.linear_regression/: ex1.linear_regreesion.ipynb
1.linear_regression/.ipynb_checkpoints/: ex1.linear_regreesion-checkpoint.ipynb
