[project]
name = "machine-learning-excercise-notebook-python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.11.1",
    "numpy>=2.5.1",
    "pandas>=3.0.3",
    "scikit-learn>=1.9.0",
    "seaborn>=0.13.2",
]

[dependency-groups]
dev = [
    "black>=26.5.1",
    "isort>=8.0.1",
    "jupyterlab>=4.6.1",
    "jupyterlab-code-formatter>=3.0.3",
    "jupyterlab-lsp>=5.3.0",
    "python-lsp-server[all]>=1.14.0",
]
